--- a/NOTEARS.ipynb
+++ b/NOTEARS.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -130,21 +130,23 @@
        "11671  3.789189  2.699285  0.730129  3.041706  "
       ]
      },
-     "execution_count": 72,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "\n",
     "import pandas as pd\n",
+    "from causalnex.structure.notears import from_pandas\n",
+    "from causalnex.plots import plot_structure, NODE_STYLE, EDGE_STYLE\n",
+    "from IPython.display import Image\n",
     "data=pd.read_csv('a1_data.csv')\n",
     "data.tail()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,14 +174,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-03-07 17:28:12,564 - /home/jay/miniconda3/envs/jay/lib/python3.10/site-packages/causalnex/structure/notears.py[line:412] - INFO: Learning structure using 'NOTEARS' optimisation.\n",
       "/home/jay/miniconda3/envs/jay/lib/python3.10/site-packages/pygraphviz/agraph.py:1405: RuntimeWarning: Warning: node 'A', graph '' size too small for label\n",
       "Warning: node 'H', graph '' size too small for label\n",
       "Warning: node 'B', graph '' size too small for label\n",
@@ -215,16 +216,12 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from causalnex.structure.notears import from_pandas\n",
-    "from causalnex.plots import plot_structure, NODE_STYLE, EDGE_STYLE\n",
-    "from IPython.display import Image\n",
-    "\n",
     "sm = from_pandas(data)\n",
     "sm.remove_edges_below_threshold(0.6)\n",
     "viz = plot_structure(\n",
@@ -242,473 +239,40 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 64,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "sm.remove_edge('F', 'E')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
-    "from causalnex.network import BayesianNetwork\n",
+    "# from causalnex.network import BayesianNetwork\n",
+    "# bn = BayesianNetwork(sm)\n",
+    "# bn = bn.fit_node_states(data)\n",
+    "# from sklearn.model_selection import train_test_split\n",
     "\n",
-    "bn = BayesianNetwork(sm)"
+    "# train, test = train_test_split(data, train_size=0.9, test_size=0.1, random_state=7)\n",
+    "# bn = bn.fit_cpds(train, method=\"BayesianEstimator\", bayes_prior=\"K2\")\n",
+    "# bn.cpds['A']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "bn = bn.fit_node_states(data)\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "from sklearn.model_selection import train_test_split\n",
-    "\n",
-    "train, test = train_test_split(data, train_size=0.9, test_size=0.1, random_state=7)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 70,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "bn = bn.fit_cpds(train, method=\"BayesianEstimator\", bayes_prior=\"K2\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 71,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead tr th {\n",
-       "        text-align: left;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead tr:last-of-type th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr>\n",
-       "      <th>B</th>\n",
-       "      <th>1.539091</th>\n",
-       "      <th>1.665672</th>\n",
-       "      <th>1.833221</th>\n",
-       "      <th>1.910116</th>\n",
-       "      <th>1.935713</th>\n",
-       "      <th>1.963227</th>\n",
-       "      <th>1.974506</th>\n",
-       "      <th>1.985499</th>\n",
-       "      <th>2.024353</th>\n",
-       "      <th>2.038975</th>\n",
-       "      <th>...</th>\n",
-       "      <th>4.446504</th>\n",
-       "      <th>4.450312</th>\n",
-       "      <th>4.456609</th>\n",
-       "      <th>4.461449</th>\n",
-       "      <th>4.472708</th>\n",
-       "      <th>4.476783</th>\n",
-       "      <th>4.488892</th>\n",
-       "      <th>4.492750</th>\n",
-       "      <th>4.496109</th>\n",
-       "      <th>4.500000</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>A</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1.711091</th>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000895</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1.738490</th>\n",
-       "      <td>0.000895</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1.824592</th>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1.851726</th>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1.868445</th>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4.485348</th>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4.487471</th>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4.491688</th>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4.496176</th>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000894</td>\n",
-       "      <td>0.000298</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4.500000</th>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000298</td>\n",
-       "      <td>0.000894</td>\n",
-       "      <td>0.000893</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>3351 rows × 3329 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "B         1.539091  1.665672  1.833221  1.910116  1.935713  1.963227  \\\n",
-       "A                                                                      \n",
-       "1.711091  0.000298  0.000298  0.000298  0.000298  0.000298  0.000298   \n",
-       "1.738490  0.000895  0.000298  0.000298  0.000298  0.000298  0.000298   \n",
-       "1.824592  0.000298  0.000298  0.000298  0.000298  0.000298  0.000298   \n",
-       "1.851726  0.000298  0.000298  0.000298  0.000298  0.000298  0.000298   \n",
-       "1.868445  0.000298  0.000298  0.000298  0.000298  0.000298  0.000298   \n",
-       "...            ...       ...       ...       ...       ...       ...   \n",
-       "4.485348  0.000298  0.000298  0.000298  0.000298  0.000298  0.000298   \n",
-       "4.487471  0.000298  0.000298  0.000298  0.000298  0.000298  0.000298   \n",
-       "4.491688  0.000298  0.000298  0.000298  0.000298  0.000298  0.000298   \n",
-       "4.496176  0.000298  0.000298  0.000298  0.000298  0.000298  0.000298   \n",
-       "4.500000  0.000298  0.000298  0.000298  0.000298  0.000298  0.000298   \n",
-       "\n",
-       "B         1.974506  1.985499  2.024353  2.038975  ...  4.446504  4.450312  \\\n",
-       "A                                                 ...                       \n",
-       "1.711091  0.000895  0.000298  0.000298  0.000298  ...  0.000298  0.000298   \n",
-       "1.738490  0.000298  0.000298  0.000298  0.000298  ...  0.000298  0.000298   \n",
-       "1.824592  0.000298  0.000298  0.000298  0.000298  ...  0.000298  0.000298   \n",
-       "1.851726  0.000298  0.000298  0.000298  0.000298  ...  0.000298  0.000298   \n",
-       "1.868445  0.000298  0.000298  0.000298  0.000298  ...  0.000298  0.000298   \n",
-       "...            ...       ...       ...       ...  ...       ...       ...   \n",
-       "4.485348  0.000298  0.000298  0.000298  0.000298  ...  0.000298  0.000298   \n",
-       "4.487471  0.000298  0.000298  0.000298  0.000298  ...  0.000298  0.000298   \n",
-       "4.491688  0.000298  0.000298  0.000298  0.000298  ...  0.000298  0.000298   \n",
-       "4.496176  0.000298  0.000298  0.000298  0.000298  ...  0.000298  0.000298   \n",
-       "4.500000  0.000298  0.000298  0.000298  0.000298  ...  0.000298  0.000298   \n",
-       "\n",
-       "B         4.456609  4.461449  4.472708  4.476783  4.488892  4.492750  \\\n",
-       "A                                                                      \n",
-       "1.711091  0.000298  0.000298  0.000298  0.000298  0.000298  0.000298   \n",
-       "1.738490  0.000298  0.000298  0.000298  0.000298  0.000298  0.000298   \n",
-       "1.824592  0.000298  0.000298  0.000298  0.000298  0.000298  0.000298   \n",
-       "1.851726  0.000298  0.000298  0.000298  0.000298  0.000298  0.000298   \n",
-       "1.868445  0.000298  0.000298  0.000298  0.000298  0.000298  0.000298   \n",
-       "...            ...       ...       ...       ...       ...       ...   \n",
-       "4.485348  0.000298  0.000298  0.000298  0.000298  0.000298  0.000298   \n",
-       "4.487471  0.000298  0.000298  0.000298  0.000298  0.000298  0.000298   \n",
-       "4.491688  0.000298  0.000298  0.000298  0.000298  0.000298  0.000298   \n",
-       "4.496176  0.000298  0.000298  0.000298  0.000298  0.000298  0.000298   \n",
-       "4.500000  0.000298  0.000298  0.000298  0.000298  0.000298  0.000298   \n",
-       "\n",
-       "B         4.496109  4.500000  \n",
-       "A                             \n",
-       "1.711091  0.000298  0.000298  \n",
-       "1.738490  0.000298  0.000298  \n",
-       "1.824592  0.000298  0.000298  \n",
-       "1.851726  0.000298  0.000298  \n",
-       "1.868445  0.000298  0.000298  \n",
-       "...            ...       ...  \n",
-       "4.485348  0.000298  0.000298  \n",
-       "4.487471  0.000298  0.000298  \n",
-       "4.491688  0.000298  0.000298  \n",
-       "4.496176  0.000894  0.000298  \n",
-       "4.500000  0.000894  0.000893  \n",
-       "\n",
-       "[3351 rows x 3329 columns]"
-      ]
-     },
-     "execution_count": 71,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "bn.cpds['A']"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
